--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 	<head>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta charset="UTF-8">
-		<title>Kate Kim - Interaction Foundations Fall 2023</title>
+		<title>Kate Kim - Coding Projects 23-24</title>
 		<link href="styles.css" rel="stylesheet">
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -22,7 +22,9 @@
 				<a href="https://katekimdo.github.io/iffall2023/recipe/complete/index.html">
 					<a href="https://katekimdo.github.io/iffall2023/microsite/final/index.html">
 						<h2>Microsite - Designer, Developer</h2>
-						<p>With the direction from my Creative director, Laura Weil, I was able to create a website with the topic of Newtro. I have never knew what Newtro was until I was given with this topic even though I am Korean, which was a great experience of getting to know my culture even more. It was quite a struggle creating navigation bar and different html pages for the first time, but I am proud of how it came through and I had so much fun with it.</p>
+						<p>During my Interaction Foundations class, I developed a multi-page website to showcase the Newtro trend, a fusion of "new" and "retro" styles gaining popularity. Using HTML and CSS, I crafted each page to visually represent the blend of vintage aesthetics with modern design elements, creating an engaging and intuitive navigation system to guide users through the trend’s story. Under the guidance of a peer creative director, I focused on clean layout choices, a cohesive color palette, and a seamless user experience to effectively capture the spirit of Newtro. This project strengthened my skills in web development and collaboration.
+
+</p>
 					</a>
 					
 					<div class="pair">
@@ -37,7 +39,7 @@
 			
 					<a href="https://cse204-2024.github.io/10-final-project-KateKimdo/">
 						<h2>Nutrition Information Portal - Designer, Developer</h2>
-						<p>For this project, I created an interactive nutrition information platform using React, which allows users to search for the nutritional content of foods by typing in a search bar. Through the integration of the FoodData Central API, nutritional data is retrieved dynamically based on user input. The project combines custom HTML and CSS for structure and design, while the interactivity is driven by JavaScript and AJAX calls. By implementing a responsive design, I ensured that the site functions smoothly across different devices, and all the content and interactions are updated efficiently through React's state management system.</p>
+						<p>For my Web Development class, I created an interactive nutrition information platform using React. Users can search for nutritional content by typing in a search bar, with data dynamically retrieved from the FoodData Central API. I used custom HTML and CSS for structure and design, while JavaScript and AJAX handle interactivity. The responsive design ensures smooth functionality across devices, with React’s state management keeping content updated efficiently.</p>
 					</a>
 
 					<div class="pair">
@@ -49,9 +51,9 @@
 							src="https://cse204-2024.github.io/10-final-project-KateKimdo/">
 						</iframe>
 					</div>
-					
+					<a href="https://katekimdo.github.io/iffall2023/recipe/complete/index.html">
 					<h2>Recipe Page</h2>
-					<p>I designed a recipe page in creating a Dalgona candy, which became famous after being on the show, Squid Game. This is a personal favorite candy that contains so many memories of when I was young, buying this candy everyday after school. This was my first time creating a website out of scratch, which was both an interesting and great learning experience. I am very happy with how it turned out with just basic information but with responsive elements that can be viewed on my phone screen.</p>
+					<p>In my Interaction Foundations class, I designed a responsive recipe page for Dalgona candy using HTML and CSS. This was my first experience building a website from scratch, focusing on basic information and responsive elements for mobile viewing. It was a rewarding project that helped me learn the foundations of responsive web design.</p>
 
 					<div class="pair">
 						<iframe class="desktop" title="Inline Frame Example"
@@ -72,7 +74,7 @@
 
 		<footer>
 
-			&copy 2023, Kate Kim. <a href="mailto:jaeyeon.k@wustl.edu">jaeyeon.k@wustl.edu</a>
+			&copy 2024, Kate Kim. <a href="mailto:jaeyeon.k@wustl.edu">jaeyeon.k@wustl.edu</a>
 
 		</footer>
 
